--- a/src/main/webapp/assets/stylesheets/atracciones.css
+++ b/src/main/webapp/assets/stylesheets/atracciones.css
@@ -6,20 +6,23 @@
 }
 
 .box-container {
-	display: flex;
-	gap: 1rem;
-	flex-wrap: wrap;
-	padding-top: 50px;
+	
+   justify-content:center;
+   align-items: center;
+   padding: 20px;
+   display:flex;
+	
+	
 }
 
 .box-container .box {
 	border: 3px solid rgba(0, 0, 0, 0.829);
-	text-align: center;
-	flex: 1 1 5rem;
+	width: 40%;
 	border-radius: 30px;
-	padding: 0;
+	padding: 14px;
 	background-color: white;
 	margin:10px;
+		
 }
 
 .box-container .box:hover {
@@ -29,46 +32,69 @@
 }
 
 .box-container .box img{
-	width: 5rem;
-	height: 4rem;
-	margin: .5rem 0;
+	width: 100%;
+	height: 100%;
 	border-radius: 10px;
 }
 
 .box-container .box h3 {
 	margin-top: 15px;
 	background-color: rgb(8, 2, 2);
-	display: inline-block;
 	padding-left: 5%;
 	padding-right: 5%;
 	border-radius: 30px;
-	font-size: 2rem;
+	font-size: 4rem;
 	font-family: "Montserrat", cursive;
 	font-weight: bold;
 	color: white;
+	text-justify: center;
+    text-align: center;
+    
 }
 
 .box-container .box p {
-	font-size: 2rem;
+	font-size: 3rem;
 	color: rgb(19, 9, 9);
 	font-family: "Montserrat", cursive;
 	font-weight: 100;
+	font-weight: bold; 
+	text-decoration: underline;
+	display: inline-block;
 }
 
+h4{
+	
+	font-size: 3rem;
+	color: rgb(19, 9, 9);
+	font-family: "Montserrat", cursive;
+	font-weight: 100;
+	font-weight: bold; 
+	display: inline-block;
+
+}
 .box-container .box button {
 	background-color: rgb(107, 179, 35);
 	border: .1rem solid rgba(0, 0, 0, .10);
 	border-radius: 5px;
-	position: relative;
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 20px;
-	margin: 2%;
-	height: 5%;
-	width: 40%;
+	width: 100%;
+	text-justify: center;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .box-container .box button:hover {
 	color: black;
 }
 
-
+.titulo{
+	margin-left: 2px;
+	color: 	#8b0000;
+	font-weight: bold;
+	font-size: 10em;
+	text-justify: center;
+    text-align: center;
+    text-shadow: 5px 5px 5px black;
+}
