--- a/src/main/webapp/assets/stylesheets/perfil.css
+++ b/src/main/webapp/assets/stylesheets/perfil.css
@@ -4,7 +4,7 @@
 .titulo{
 	color: black;
 	text-decoration: underline;
-	font-size: 50px;
+	font-size: 4em;
 	margin-bottom: 50px;
 	font-weight: bold; 
 }
@@ -12,7 +12,7 @@
 
 p{
 	color: black;
-	font-size: 10px;
+	font-size: 3em;
 	margin-bottom: 30px;
 	margin-right: 20px;
 	font-weight: bold; 
@@ -25,7 +25,7 @@ h4{
 	margin-left: 2px;
 	color: 	#8b0000;
 	font-weight: bold;
-	font-size: 10px;
+	font-size: 3em;
 	display: inline-block;
 	
 }
@@ -37,3 +37,4 @@ h4{
 	background-color: #E8DABD;
 		
 }
+
